Worked on a ban command

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -17,3 +17,5 @@ commands:
     description: Deletes a world
   wtp:
     description: Teleports the player to that world
+  ban:
+    description: Allows staff to ban players!
